--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@
 
       <button id="btnSaveAsPNG">Salvar PNG</button>
     </div>
+    <br>
+    <div class="selecaoPDF">
+      <div class="chkSelecionarTudo">
+        <input type="checkbox" name="selecionarTodas" id="selecionarTodas"> Selecionar tudo
+      </div>
+    
+      <div class="arquivo">
+        <input type="checkbox" name="chkArquivoSelecao" id="chkArquivoSelecao">
+        Página 1
+        <div class="arquivoSelecao"></div>
+      </div>
+      <button id="btnInserirPaginas">Inserir</button>
+
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
     <script src="./src/script.js"></script>
