logica checkbox selecionar tudo

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
 
   <!-- <div class="selecaoPDF">
     <div class="chkSelecionarTudo">
-      <input type="checkbox" name="selecionarTodas" id="selecionarTodas"> 
+      <input type="checkbox" name="selecionarTodas" id="selecionarTudo"> 
       Selecionar tudo
     </div>
 
     <div class="arquivo">
-      <input type="checkbox" name="chkArquivoSelecao" id="chkArquivoSelecao">
+      <input type="checkbox" name="chkArquivoSelecao" class="chkArquivoSelecao">
       Página 1
       <div class="arquivoSelecao"></div>
     </div>
