--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="arquivo">
         <input type="checkbox" name="chkArquivoSelecao" id="chkArquivoSelecao">
         Página 1
-        <div class="arquivoSelecao"></div>
+        <div class="arquivoSelecao" id="arquivo"></div>
       </div>
       <button id="btnInserirPaginas">Inserir</button>
 
