logica checkbox selecionar tudo

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 <option value="simples">Simples</option>
                 <option value="dupla">Dupla</option>
                 <option value="tripla">Tripla + cordinha</option>
+                <option value="radiofrequencia">Radiofrequência</option>
               </select>
             </div>
             <div class="estilo_botao mascara">
@@ -164,7 +165,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
     <script src="./src/script.js"></script>
     <!-- <script src="./tests/teste-js.js"></script> -->
-    <script src="./src/inserirArquivos1.js"></script>
+    <script src="./src/inserirArquivos.js"></script>
+    <!-- <script src="./src/inserirArquivos1.js"></script> -->
     <script src="./src/baixarPng.js"></script>
   </body>
 
