logica checkbox selecionar

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
     <script src="./src/script.js"></script>
     <!-- <script src="./tests/teste-js.js"></script> -->
-    <script src="./src/inserirArquivos.js"></script>
-    <!-- <script src="./src/inserirArquivos1.js"></script> -->
+    <!-- <script src="./src/inserirArquivos.js"></script> -->
+    <script src="./src/inserirArquivos1.js"></script>
     <script src="./src/baixarPng.js"></script>
   </body>
 
