estudo logica para movimentar elementos

--- a/tests/teste-divs.html
+++ b/tests/teste-divs.html
@@ -37,12 +37,19 @@
     resize: horizontal;
 }
 
+#movableElement1{
+  top: 150px;
+  background-color: red;
+}
+
   </style>
 </head>
 
 <body>
   <!-- <div id="container"> -->
     <div id="movableElement" class="movable">
+    </div>
+    <div id="movableElement1" class="movable">
       <!-- Arraste-me! -->
     </div>
   <!-- </div> -->
