--- a/tests/teste-divs.html
+++ b/tests/teste-divs.html
@@ -7,6 +7,10 @@
   <title>Movimentar Elementos</title>
   <link rel="stylesheet" href="styles.css">
   <style>
+    *{
+      margin:0;
+      padding: 0;
+    }
     /* body {
     font-family: Arial, sans-serif;
     margin: 0;
