--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Layouts</title>
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="/src/css/style.css" />
   </head>
 
   <body>
@@ -148,11 +148,11 @@
     <br>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
-    <script src="./src/script.js"></script>
+    <script src="/src/js/script.js"></script>
     <!-- <script src="./tests/teste-js.js"></script> -->
     <!-- <script src="./src/inserirArquivos.js"></script> -->
-    <script src="./src/inserirArquivos1.js"></script>
-    <script src="./src/baixarPng.js"></script>
+    <script src="/src/js/inserirArquivos1.js"></script>
+    <script src="/src/js/baixarPng.js"></script>
   </body>
 
 </html>
